# pyinstaller-docker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-docker.yml
mypackage/: main.py
